<resources>
    <string name="app_name">MBTI App</string>

    <string name="tv_register">Daftar Akun</string>
    <string name="tv_q_have_account">Sudah memiliki akun?</string>
    <string name="tv_your_personality">Kepribadian Kamu</string>
    <string name="tv_your_mbti_type">Tipe MBTI Kamu</string>
    <string name="tv_welcome_back">Selamat datang kembali!</string>
    <string name="tv_welcome">Selamat Datang!</string>
    <string name="tv_lets_login_first">Ayo Login Dulu</string>
    <string name="tv_q_not_have_account">Belum punya akun?</string>
    <string name="tv_recommended_learning">Rekomendasi Belajar</string>

    <string name="hint_full_name">Nama lengkap</string>
    <string name="hint_email_address">Alamat email</string>
    <string name="hint_password_1">Kata sandi</string>
    <string name="hint_password_2">Ketik ulang kata sandi</string>
    <string name="hint_birth_date">Tanggal lahir</string>

    <string name="rb_male">Laki-laki</string>
    <string name="rb_female">Perempuan</string>

    <string name="btn_register">Daftar</string>
    <string name="btn_login">Masuk</string>
    <string name="btn_retake_mbti">Ulangi Tes MBTI</string>
    <string name="btn_logout">Keluar</string>

    <string name="example_tv_personality_description">Individu yang praktis dan berpikiran fakta yang kendalanya tidak diragukan lagi. Mereka cenderung terorganisir, bertanggung jawab, dan dapat diandalkan. ISTJ memiliki ketelitian tinggi dalam menjalankan tugas-tugas yang terstruktur.</string>
    <string name="example_tv_personality_type">Ahli Logistik</string>
    <string name="example_tv_full_name">Bayu Tantra Bramandhita</string>
    <string name="example_tv_mbti_type">ISTJ</string>
    <string name="example_tv_email_address">a150dsx2099@bangkit.academy</string>
    <string name="example_tv_recommendation">Membuat jadwal belajar terstruktur: ISTJ cenderung menghargai keteraturan dan struktur. Buat jadwal belajar yang terstruktur dan ikuti dengan disiplin.</string>

    <string name="dialog_logout_question">Kamu yakin ingin logout?</string>
    <string name="dialog_logout_positive">Logout</string>
    <string name="dialog_invalid_register">Silahkan isi semua kolom terlebih dahulu</string>
    <string name="dialog_mbti_success">MBTI kamu sudah teridentifikasi.\nSekarang kamu bisa login untuk melihat rekomendasi belajar yang cocok untuk kamu.</string>
    <string name="dialog_mbti_failed">Maaf..\nKami gagal menghubungkan kamu ke server :(</string>
    <string name="dialog_invalid_register_positive">Oke</string>
    <string name="dialog_mbti_positive">Ayo Login!</string>
    <string name="dialog_logout_negative">Batal</string>
    <string name="dialog_register_complete_message">Akun berhasil terdaftar, ayo lanjut ke tes MBTI kamu!</string>
    <string name="dialog_register_complete_positive">Ayo!</string>
    <string name="dialog_invalid_register_password">Password tidak sama</string>
    <string name="dialog_register_session_exists">"Proses pendaftaran akun sebelumnya belum diselesaikan \nNama : %1$s"</string>
    <string name="btn_next">Selanjutnya</string>
    <string name="btn_finish">Selesai</string>
    <string name="example_tv_question">Apakah Anda lebih suka membaca buku daripada menonton video</string>
    <string name="btn_previous">Sebelumnya</string>
    <string name="example_tv_current_question">1</string>
    <string name="divider_current_total_question">/</string>
    <string name="example_total_question">1</string>
    <string name="toast_welcome">Selamat datang, %1$s</string>
    <string name="toast_login_btn_press_again">Tekan login sekali lagi</string>
    <string name="toast_register_btn_press_again">Tekan register sekali lagi</string>
    <string name="toast_register_email_exists">Email sudah terdaftar</string>
    <string name="toast_login_wrong_cridential">Email atau password tidak ditemukan</string>
    <string name="toast_login_form_invalid">Silahkan isi email dan password terlebih dahulu</string>
    <string name="mbti_rb_yes">Yes</string>
    <string name="mbti_rb_no">No</string>

</resources>