<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="?attr/colorSurface"
    tools:context=".ui.register.RegisterActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/tv_register"
        android:textColor="?attr/colorPrimary"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/circularRevealLinearLayout3"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.circularreveal.CircularRevealLinearLayout
        android:id="@+id/circularRevealLinearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/register_container"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:id="@+id/circularRevealLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="32dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginVertical="75dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <EditText
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="4dp"
                android:autofillHints=""
                android:background="@drawable/edittext_container"
                android:drawableStart="@drawable/baseline_account_circle_24"
                android:drawablePadding="8dp"
                android:hint="@string/hint_full_name"
                android:inputType="text"
                android:maxLines="1"
                android:padding="16dp" />


            <EditText
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="4dp"
                android:autofillHints=""
                android:background="@drawable/edittext_container"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:hint="@string/hint_email_address"
                android:inputType="text"
                android:maxLines="1"
                android:padding="16dp" />


            <EditText
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="4dp"
                android:autofillHints=""
                android:background="@drawable/edittext_container"
                android:drawableStart="@drawable/baseline_key_24"
                android:drawablePadding="8dp"
                android:hint="@string/hint_password_1"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="16dp" />


            <EditText
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="4dp"
                android:autofillHints=""
                android:background="@drawable/edittext_container"
                android:drawableStart="@drawable/baseline_key_24"
                android:drawablePadding="8dp"
                android:hint="@string/hint_password_2"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="16dp" />


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_male" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_female" />

            </RadioGroup>


            <EditText
                android:id="@+id/et_birth_date"
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="4dp"
                android:autofillHints=""
                android:background="@drawable/edittext_container"
                android:drawableEnd="@drawable/baseline_date_range_24"
                android:drawablePadding="8dp"
                android:hint="@string/hint_birth_date"
                android:inputType="datetime"
                android:maxLines="1"
                android:padding="16dp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:height="50dp"
                android:backgroundTint="?attr/colorPrimary"
                android:text="@string/btn_register"
                app:cornerRadius="8dp" />


        </com.google.android.material.circularreveal.CircularRevealLinearLayout>

        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_q_have_account" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/go_login"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:height="50dp"
                android:backgroundTint="?attr/colorPrimaryContainer"
                android:drawableEnd="@drawable/baseline_arrow_right_alt_24"
                android:text="@string/btn_login"
                android:textColor="?attr/colorPrimary"
                app:cornerRadius="8dp" />

        </com.google.android.material.circularreveal.CircularRevealLinearLayout>

    </com.google.android.material.circularreveal.CircularRevealLinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>