<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="?attr/colorSurface"
    tools:context=".ui.login.LoginActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_welcome"
        android:textColor="?attr/colorPrimary"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/materialTextView2"
        app:layout_constraintStart_toStartOf="@+id/materialTextView2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/tv_lets_login_first"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/circularRevealLinearLayout"
        app:layout_constraintStart_toStartOf="@+id/circularRevealLinearLayout" />

    <com.google.android.material.circularreveal.CircularRevealLinearLayout
        android:id="@+id/circularRevealLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/register_container"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:orientation="vertical"
            android:paddingVertical="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/et_email_address"
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="4dp"
                android:autofillHints=""
                android:background="@drawable/edittext_container"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:hint="@string/hint_email_address"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="16dp" />

            <EditText
                android:id="@+id/et_password"
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="4dp"
                android:autofillHints=""
                android:background="@drawable/edittext_container"
                android:drawableStart="@drawable/baseline_key_24"
                android:drawablePadding="8dp"
                android:hint="@string/hint_password_1"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="16dp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:height="50dp"
                android:text="@string/btn_login"
                app:cornerRadius="8dp" />


        </com.google.android.material.circularreveal.CircularRevealLinearLayout>


        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:id="@+id/circularRevealLinearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_q_not_have_account" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/go_register"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:height="50dp"
                android:backgroundTint="?attr/colorPrimaryContainer"
                android:drawableEnd="@drawable/baseline_arrow_right_alt_24"
                android:text="@string/btn_register"
                android:textColor="?attr/colorPrimary"
                app:cornerRadius="8dp" />

        </com.google.android.material.circularreveal.CircularRevealLinearLayout>
    </com.google.android.material.circularreveal.CircularRevealLinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>