<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="?attr/colorSurface"
    android:orientation="vertical"
    tools:context=".ui.main.HomeFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:layout_width="150dp"
            android:layout_height="125dp"
            android:layout_marginTop="20dp"
            android:gravity="bottom"
            android:paddingStart="16dp"
            tools:ignore="RtlSymmetry">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:text="@string/tv_welcome_back"
                android:textColor="?attr/colorOnSurface"
                android:textSize="24sp"
                android:textStyle="bold" />

        </com.google.android.material.circularreveal.CircularRevealLinearLayout>

        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:layout_width="250dp"
            android:layout_height="125dp"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_profile"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:maxLines="2"
                android:text="@string/example_tv_full_name"
                android:textAlignment="textEnd"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

        </com.google.android.material.circularreveal.CircularRevealLinearLayout>

    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp">

        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">

            <com.google.android.material.circularreveal.CircularRevealLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:background="@drawable/shape_container"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_your_mbti_type"
                    android:textAlignment="center"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_mbti_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/example_tv_mbti_type"
                    android:textAlignment="center"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    android:textSize="28sp"
                    android:textStyle="bold" />

            </com.google.android.material.circularreveal.CircularRevealLinearLayout>

            <com.google.android.material.circularreveal.CircularRevealLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:background="@drawable/shape_container"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_your_personality"
                    android:textAlignment="center"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_personality_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/example_tv_personality_type"
                    android:textAlignment="center"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_personality_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/example_tv_personality_description"
                    android:textAlignment="center"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    android:textSize="16sp"
                    android:textStyle="italic" />

            </com.google.android.material.circularreveal.CircularRevealLinearLayout>

        </com.google.android.material.circularreveal.CircularRevealLinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>